--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
+    "coverage": "^0.4.1",
     "json-server": "^0.17.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,6 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "coverage":"react-scripts test --coverage",
     "dev": "concurrently \"json-server --watch db.json --port 3001\" \"npm start\""
   },
   "eslintConfig": {
