--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "@mui/material": "^5.11.12",
     "@mui/styled-engine-sc": "^5.11.11",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "axios": "^1.3.4",
+    "axios": "^1.2.0-alpha.1",
     "coverage": "^0.4.1",
     "json-server": "^0.17.2",
     "react": "^18.2.0",
@@ -30,7 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "coverage":"react-scripts test --coverage",
+    "coverage": "react-scripts test --coverage --watchAll --collectCoverageFrom='src/components/**/*.{ts,tsx}'",
     "dev": "concurrently \"json-server --watch db.json --port 3001\" \"npm start\""
   },
   "eslintConfig": {
@@ -50,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^14.0.0"
   }
 }
