--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.2.0-alpha.1",
+    "concurrently": "^7.6.0",
     "coverage": "^0.4.1",
     "json-server": "^0.17.2",
     "react": "^18.2.0",
